# tok715

./: .gitignore  .gitmodules  README.md  database.sql  docker-compose.yaml  pyproject.toml
tok715/: constants.py
tok715/ai/: client.py  embeddings.py  generation.py  model.py
tok715/ai/executors/: __init__.py  chat.py  constants.py  embeddings.py  generation.py
tok715/ai/tunning/: __init__.py  history.py  system.py  system_prompt.txt
tok715/apps/: ai_service.py  audiotouch.py  catchqueue.py  corepsyche.py  inputdirec.py  mindignite.py  speechloud.py  vectorhero.py  voicerecog.py
tok715/apps/ai_service/: cli.py
tok715/apps/catchqueue/: cli.py
tok715/apps/inputdirec/: cli.py
tok715/apps/mindignite/: cli.py
tok715/apps/vectorhero/: cli.py
tok715/apps/vectorstor/: cli.py
tok715/apps/voicerecog/: cli.py
tok715/cach/: __init__.py  flagging.py  publish.py  queue.py  setup.py  topic.py
tok715/database/: client.py  collection.py  model.py  util.py
tok715/misc/: __init__.py  client.py  clients.py  config.py  constants.py  ffmpeg.py  nls.py  processes.py  queue.py
tok715/stor/: __init__.py  messages.py  model.py  setup.py
tok715/store/: __init__.py  messages.py  model.py  store.py
tok715/types/: user_input.py
tok715/vectorstor/: cli.py
tok715/voicerecog/: cli.py
train/: data.txt  prepare.py  requirements.txt  train.sh
