[tool.poetry]
name = "tok715"
version = "0.0.2"
description = "CODENAME: TOK715"
authors = ["GUO YANKE <hi@guoyk.xyz>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "tok715" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
pymilvus = "^2.3"
SQLAlchemy = "^2.0"
PyMySQL = "^1.1"
pika = "^1.3"
PyYAML = "^6.0"
torch = "^2.1"
torchvision = "^0.16"
torchaudio = "^2.1"
redis = { extras = ["hiredis"], version = "^5.0.1" }
oss2 = "^2.18.2"
aliyun-python-sdk-core = ">=2.13.3"
matplotlib = ">=3.3.4"
huggingface-hub = "^0.17"
transformers = "^4.34.1"
accelerate = "^0.24.0"
safetensors = "^0.4.0"
sentence-transformers = "^2.2.2"
requests = "^2.31.0"

[tool.poetry.scripts]
tok715-ai-service = 'tok715.apps.ai_service:main'
tok715-catchqueue = 'tok715.apps.catchqueue:main'
tok715-danmucolle = 'tok715.apps.danmucolle:main'
tok715-inputdirec = 'tok715.apps.inputdirec:main'
tok715-mindignite = 'tok715.apps.mindignite:main'
tok715-speechloud = 'tok715.apps.speechloud:main'
tok715-voicerecog = 'tok715.apps.voicerecog:main'
tok715-vectorhero = 'tok715.apps.vectorhero:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
