[tool.poetry]
name = "tok715"
version = "0.0.2"
description = "CODENAME: TOK715"
authors = ["GUO YANKE <hi@guoyk.xyz>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "tok715" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1"
pymilvus = "^2.3"
SQLAlchemy = "^2.0"
PyMySQL = "^1.1"
pika = "^1.3"
PyYAML = "^6.0"
redis = { extras = ["hiredis"], version = "^5.0.1" }
oss2 = "^2.18.2"
aliyun-python-sdk-core = ">=2.13.3"
requests = "^2.31.0"

[tool.poetry.group.ai-service]
optional = true

[tool.poetry.group.ai-service.dependencies]
torch = ">=2.0"
torchvision = "^0.16"
torchaudio = "^2.1"
matplotlib = ">=3.3.4"
huggingface-hub = "^0.17"
transformers = "4.32.0"
accelerate = "^0.24.0"
safetensors = "^0.4.0"
sentence-transformers = "^2.2.2"
protobuf = "^4.24.4"
cpm-kernels = "^1.0.11"
gradio = "^3.50.2"
mdtex2html = "^1.2.0"
sentencepiece = "^0.1.99"
tiktoken = "^0.5.1"
einops = "^0.7.0"
scipy = "^1.11.3"
transformers-stream-generator = "0.0.4"
peft = "^0.5.0"
deepspeed = "^0.11.1"
auto-gptq = "^0.4.2"
optimum = "^1.13.2"

[tool.poetry.scripts]
tok715-ai-service = 'tok715.apps.ai_service:main'
tok715-audiotouch = 'tok715.apps.audiotouch:main'
tok715-catchqueue = 'tok715.apps.catchqueue:main'
tok715-danmucolle = 'tok715.apps.danmucolle:main'
tok715-inputdirec = 'tok715.apps.inputdirec:main'
tok715-mindignite = 'tok715.apps.mindignite:main'
tok715-vectorhero = 'tok715.apps.vectorhero:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
